--- a/Covid_19Tweets_ClassificationModels.ipynb
+++ b/Covid_19Tweets_ClassificationModels.ipynb
@@ -1208,7 +1208,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Neutral AUC-> 0.83\n"
+      "Positive AUC-> 0.83\n"
      ]
     }
    ],
@@ -1230,7 +1230,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Positive AUC--> 0.38\n"
+      "Neutral AUC--> 0.38\n"
      ]
     }
    ],
