--- a/Covid_19Tweets_ClassificationModels.ipynb
+++ b/Covid_19Tweets_ClassificationModels.ipynb
@@ -1013,7 +1013,7 @@
     "\n",
     "F1 Score might be a better measure to use if we need to seek a balance between Precision and Recall unless there is an uneven class distribution between classes. For instance, large number of Actual Negatives.\n",
     "\n",
-    "* F1 score = $2*\\frac{Precision \\, * \\, Recall}{Precision \\, + \\,Recall}$-> Harmonic Mean"
+    "* F1 score = $2*\\frac{Precision \\, * \\, Recall}{Precision \\, + \\,Recall}$ --> Harmonic Mean"
    ]
   },
   {
@@ -1175,6 +1175,7 @@
     "LRE = LogisticRegression(solver='lbfgs')\n",
     "\n",
     "LRE.fit(xtrain, ytrain)"
+    "print("\nPredicting the negative class using the feature vector[x_test]")"
    ]
   },
   {
